fixed mobile landscape footer error, adjusted header spacing

--- a/style.css
+++ b/style.css
@@ -2237,6 +2237,10 @@
             padding: 5% 0 0 0;
             font-family: 'Lato', sans-serif;
         }
+
+        .pg4-title {
+            padding-left: 4%;
+        }
     
         .blue-underline {
             background-color: #00d5fb;
@@ -2252,50 +2256,51 @@
         }
     
         .pg4-leftcol {
-            font-size: 18px;
+            font-size: 12px;
             font-family: 'Lato', sans-serif;
             margin-left: 4%;
         }
     
         .pg4-rightcol {
-            font-size: 14px;
+            font-size: 12px;
             font-family: 'Lato', sans-serif;
             position: absolute;
             top: 17%;
-            left: 50%;
+            left: 40%;
         }
     
-    .footer-container {
-        height: 130px;
-        margin: 0 0 0 0;
-        padding: 0;
-        width: 100%;
-        overflow: hidden;
-    }
-    
-    .footer {
-        color: #ddd;
-        background-color: rgba(40, 46, 52, 0.932);
-        height: 100%;
-        padding: 0.3% 3%;
-    }
-    
-    div.footer {
-        font-family: sans-serif;
-        font-size: 11px;
-        text-align: left;
-    }
-
-    p.first-line {
-        font-size: 16px;
-    }
-
-    .foot-logo {
-        float: right;
-        width: 18%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
+        .footer-container {
+            height: 120px;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            overflow: hidden;
+        }
+        
+        .footer {
+            color: #ddd;
+            background-color: #09503a;
+            padding: 2% 1% 3% 1%;
+        }
+        
+        div.footer {
+            font-family: 'Source Sans Pro', sans-serif;
+            font-size: 10px;
+            text-align: left;
+        }
+        
+        .foot-logo {
+            float: right;
+            height: 60%;
+            padding: 3% 7% 5% 0;
+        }
+        
+        .foot-logo-left {
+            float: right;
+            height: 50%;
+            padding: 4% 0 5% 1%;
+        }
+        
+        }
 
 
